--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tekglide/videotab",
+  "name": "tekglidee/module-videotab",
   "description": "VideoTab extension for Magento 2 by Tekglide",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.2.22",
