--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,17 @@
 {
   "name": "tekglide/module-videotab",
   "description": "VideoTab extension for Magento 2 by Tekglide",
-  "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.2.22",
-    "magento/framework": ">=100.0"
-  },
   "type": "magento2-module",
-  "version": "1.4.1",
+  "version": "1.0.0",
   "license": [
-    "GPL-3.0"
+    "OSL-3.0",
+    "AFL-3.0"
   ],
+  "require": {
+    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "magento/framework": "~100.0.4"
+  },
+  
   "autoload": {
     "files": [ "registration.php" ],
     "psr-4": {
